<resources>
    <string name="app_name">FinalProject-ShoppingMallService-team1</string>

    <string name="primary_color">Primary color</string>
    <string name="button">Button</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="fitmoa">피트모아</string>

    <!-- permission fragment-->
    <string name="permission_Title">앱 접근 권한 안내</string>
    <string name="permission_Location_Explain">위치 정보를 기반으로 센터ㆍ트레이너 검색</string>
    <string name="permission_Photo_Explain">프로필ㆍ사진 첨부 시 사진촬영</string>
    <string name="permission_Camera_Explain">프로필ㆍ사진 첨부 시 접근</string>
    <string name="permission_Explain">접근 권한은 해당 기능 이용 시 허용이 필요하며, 허용하지 않아도 해당 기능을 제외한 서비스 이용이 가능합니다. 휴대폰 \'설정\' 에서도 접근 권한을 변경하실 수 있습니다.</string>

    <!-- OnBoarding fragment -->
    <string name="onboarding_Title">우리 동네 운동정보를\n 한 번에!</string>
    <string name="onboarding_Explain">가까운 우리 동네 센터, 강사를 쉽게 찾아보세요.</string>

    <!-- Login fragment -->
    <string name="login_welcome">피트모아에 오신걸 환영합니다!</string>

    <string name="kakao_Login">카카오로 로그인</string>
    <string name="naver_Login">NAVER로 로그인</string>
    <string name="google_Login">Google로 로그인</string>

    <!-- Dialog Button -->
    <string name="ok">확인</string>
    <string name="cancel">취소</string>

    <!-- ReadTrainer fragment -->
    <string name="appbar_scrolling_view_behavior">com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior</string>

    <!-- web_client_id -->
    <string name="default_web_client_id">524744687587-u0ln40022gc6pe0ijohht8jfau4prtj3.apps.googleusercontent.com</string>

</resources>